complete project documentation and finalize core functionalities